--- a/webapp/index.html
+++ b/webapp/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />    
     <title>Crabsburger</title>    
-  <link rel="stylesheet" href="/tailwindcss4640a65b4f0194f9.css">
+  <link rel="stylesheet" href="/tailwind.css">
 </head>
   <body>
     <div id="main"></div>
@@ -23,13 +23,12 @@
   </body>
 </html>
 <script>// Dioxus-CLI
-// https://github.com/DioxusLabs/dioxus/tree/master/packages/cli
+// https://github.com/DioxusLabs/cli
 
 (function () {
   var protocol = window.location.protocol === 'https:' ? 'wss:' : 'ws:';
   var url = protocol + '//' + window.location.host + '/_dioxus/ws';
-    var poll_interval = 8080;
-
+  var poll_interval = 8080;
   var reload_upon_connect = () => {
       window.setTimeout(
           () => {
@@ -40,16 +39,11 @@
           poll_interval);
   };
 
-    var ws = new WebSocket(url);
-
-    ws.onmessage = (ev) => {
-        console.log("Received message: ", ev, ev.data);
-
-        if (ev.data == "reload") {
-            window.location.reload();
-        }
+  var ws = new WebSocket(url);
+  ws.onmessage = (ev) => {
+      if (ev.data == "reload") {
+          window.location.reload();
+      }
   };
-
   ws.onclose = reload_upon_connect;
-})()
-</script>
+})()</script>
